; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-proc-ext/test/extr_proc.c_proc_new_cfunc_with_env.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-proc-ext/test/extr_proc.c_proc_new_cfunc_with_env.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RProc = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"n\00", align 1
@return_func_name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @proc_new_cfunc_with_env to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proc_new_cfunc_with_env(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.RProc*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @mrb_get_args(i32* %9, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %5)
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @mrb_symbol_value(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* @return_func_name, align 4
  %15 = call %struct.RProc* @mrb_proc_new_cfunc_with_env(i32* %13, i32 %14, i32 1, i32* %6)
  store %struct.RProc* %15, %struct.RProc** %8, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.RProc*, %struct.RProc** %8, align 8
  %18 = call i32 @MRB_METHOD_FROM_PROC(i32 %16, %struct.RProc* %17)
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @mrb_class_ptr(i32 %20)
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @mrb_define_method_raw(i32* %19, i32 %21, i32 %22, i32 %23)
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*) #1

declare dso_local i32 @mrb_symbol_value(i32) #1

declare dso_local %struct.RProc* @mrb_proc_new_cfunc_with_env(i32*, i32, i32, i32*) #1

declare dso_local i32 @MRB_METHOD_FROM_PROC(i32, %struct.RProc*) #1

declare dso_local i32 @mrb_define_method_raw(i32*, i32, i32, i32) #1

declare dso_local i32 @mrb_class_ptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
